# AI-tutor

./: .env.example  app.py  pyproject.toml
agents/: langgraph_agent.py  mcp_agent.py
config/: mcp_config.json  settings.py
core/: interactive.py  llm.py  memory.py  rate_limiter.py  state.py
models/: api_models.py
processors/: audio_processor.py  document_processor.py  translation.py
routers/: audio.py  documents.py  tutor.py
